# jan_auto_installer

./: .gitignore  AGENTS.md  README.md  jan_config_tool.py  jan_config_tool.spec  jan_proxy.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
jan_config_payload/: localstorage.json
jan_config_payload/assistants/5czfqs/: assistant.json
jan_config_payload/assistants/informatik-anfaenger/: assistant.json
jan_config_payload/assistants/informatik-experte/: assistant.json
jan_config_payload/assistants/jan/: assistant.json
jan_config_payload/assistants/ndoxj/: assistant.json
jan_config_payload/assistants/test-assistent/: assistant.json
